@@ -50,7 +50,7 @@ enum DataTransformVMOperator
     OP_GT, OP_GE, OP_LT, OP_LE, OP_EQ, OP_NEQ,
     OP_RANGE, OP_INDEX, OP_x_IDX,
     OP_ASSIGN_X, OP_ASSIGN_Y, OP_ASSIGN_S, OP_ASSIGN_A,
-    OP_DO_ONCE, OP_RESIZE, OP_ORDER, OP_DELETE, OP_BEGIN, OP_END,
+    OP_DO_ONCE, OP_RESIZE, OP_ORDER, OP_BEGIN, OP_END,
     OP_END_AGGREGATE, OP_AGCONDITION,
     OP_AGSUM, OP_AGMIN, OP_AGMAX, OP_AGAREA, OP_AGAVG, OP_AGSTDDEV,
     OP_FUNC, OP_SUM_F, OP_SUM_Z, OP_NUMAREA, OP_FINDX, OP_FIND_EXTR
